[project]
name = "assistant-basin"
version = "0.1.0"
description = "Perturbation-recovery experiments for establishing assistant basin existence in transformers"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "huggingface_hub",
    "accelerate>=0.27.0",
    "numpy",
    "matplotlib",
    "pandas",
    "tqdm",
    "scipy",
    "typing_extensions>=4.12",
    "jupyter",
    "ipykernel",
]
